# remote-probe

./: .gitmodules  README.md
host/: README.md  main.py
local/: CMakeLists.txt  README.md
local/src/: main-remote.cpp  main-remote.h  main.cpp
remote/: CMakeLists.txt  README.md
remote/src/: main-remote.cpp  main-remote.h  main.cpp
